test/Generics/materializable_restrictions.code
// RUN: %target-typecheck-verify-language

fn test15921520() {
    var x: Int = 0
    fn f<T>(_ x: T) {}
    f(&x) // expected-error{{'&' used with non-inout argument of type 'Int'}} {{7-8=}}
}

fn test20807269() {
    var x: Int = 0
    fn f<T>(_ x: T) {}
    f(1, &x) // expected-error{{extra argument in call}}
}

fn test15921530() {
    struct X {}

    fn makef<T>() -> (T) -> () {
      return {
        x in ()
      }
    }
    var _: (inout X) -> () = makef() // expected-error{{cannot convert value of type '(X) -> ()' to specified type '(inout X) -> ()'}}
}
